test/org/midica/testfiles/failing/macro-nested.midica
INCLUDE_FILE inc/instruments.midica

MACRO outer
	0 c /4
	MACRO inner
		0 c /4
	END
	0 c /4
END
